--- a/index.html
+++ b/index.html
@@ -273,20 +273,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
    </p>
     </div>
   </div>
+  <marquee behavior="scroll" direction="right" scrollamount="10" class="marquee">
+	    <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀   Let's build someting great together! 💻 🚀 </h2> 
+</marquee>
 </div>
 </div>
 
     <div id="contact">
-	   
-	    <marquee behavior="scroll" direction="right" scrollamount="10" class="marquee">
-	    <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀   Let's build someting great together! 💻 🚀 </h2> 
-</marquee>
-	    <marquee behavior="scroll" direction="left" scrollamount="10" class="marquee">
-	    <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">💻 🚀Let's build someting great together!     💻 🚀Let's build someting great together!     💻 🚀Let's build someting great together!     💻 🚀Let's build someting great together!     💻 🚀Let's build someting great together!     💻 🚀Let's build someting great together!    💻 🚀 Let's build someting great together! </h2> 
-  </marquee>
-	    <marquee behavior="scroll" direction="right" scrollamount="10" class="marquee">
-	    <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀   Let's build someting great together! 💻 🚀 </h2> 
-</marquee>
+	   <h2 style="text-transform:uppercase;color:#dfd2c3;">Contact</h2>
+	  
 <table>
                   <tr>  
 			  <td>  
