--- a/index.html
+++ b/index.html
@@ -275,7 +275,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 
 </div>
-  <marquee behavior="scroll" direction="right" scrollamount="10" class="marquee">
+ 
+</div>
+<div style="margin:3em;">
+	 <marquee behavior="scroll" direction="right" scrollamount="10" class="marquee">
 	    <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀   Let's build someting great together! 💻 🚀 </h2> 
 </marquee>
 </div>
