--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
         <div id="magnify">
             <h1 onclick="closemagnify()"><i class="fas fa-times"></i></h1>
-            <div id="img_here"></div>
+            <div id="img_here"><img src="/images/christelle.jpeg"></div>
         </div>
         <header id="header" style="background: #171717 !important;" class="animated slideInDown" style="animation-delay:1.8s;">
             <table>
@@ -186,7 +186,7 @@
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
                     <h2 style="color:#dfd2c3;">Hi there👋 I am Christelle, a Web Developer & Designer.</h2>
                     <h1 class="d-none" style="display:none;">Freelance Web Developer in Lebanon | Christelle Haddad</h1>
-                    <h1 class="big_header" ><span>I build beautiful <i>user-centered</i> experiences.</span></h1>
+                    <h2 class="big_header" ><span>I build beautiful <i>user-centered</i> experiences.</span></h2>
                     <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" >Book a call</button></a><br>
                     
                 </td>
