--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
  <h2 style="text-transform:uppercase;color:#dfd2c3;">my process</h2>
  <div class="card-deck">
   <div class="card">
-    <img class="card-img-top" style="width:30%;" src="images/call.png" alt="Call">
+    <img class="card-img-top" style="width:30%;" src="images/call.png" alt="first step is a discovery call">
     <div class="card-body">
         <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;"><span class="big_header" style="font-size:3em;">1</span> Discovery Call</h4>
         <p class="card-text">We will start with a discovery call 
@@ -249,14 +249,14 @@
     </div>
 </div>
 <div class="card">
-    <img class="card-img-top" style="width:30%;" src="images/proposal.png" alt="proposal">
+    <img class="card-img-top" style="width:30%;" src="images/proposal.png" alt="second step is sending you a proposal">
     <div class="card-body">
         <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;"><span class="big_header" style="font-size:3em;">2</span>Proposal</h4>
         <p class="card-text">I will send you a work plan based on what we discussed and a quote. We will work together to gather all the content needed; copy, images, etc. </p>
     </div>
 </div>
 <div class="card">
-    <img class="card-img-top" style="width:30%;" src="images/work.png" alt="Design and development">
+    <img class="card-img-top" style="width:30%;" src="images/work.png" alt="third step is all about the design and development">
     <div class="card-body">
       <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">  <span class="big_header" style="font-size:3em;">3</span>Design & Development</h4>
       <p class="card-text">The work begins! I will keep you up to date throughout the whole process.
@@ -265,7 +265,7 @@
 </div>
 </div>
 <div class="card">
-    <img class="card-img-top" style="width:30%;" src="images/delivery.png" alt="delivery">
+    <img class="card-img-top" style="width:30%;" src="images/delivery.png" alt="final step is the delivery and training">
     <div class="card-body">
        <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">  <span class="big_header" style="font-size:3em;">4</span>Project Delivery</h4>
        <p class="card-text">Congrats, Your project is complete! But our relationship does not end there. 
@@ -314,7 +314,7 @@
 
 <div id="footer">
     <a href="https://g.page/r/CWhZNV453lfOEBI/review"><img src="images/review.png" width="15%" class="review"/></a></br>
-    ©2022 <a href="https://christellehddd.com/" style="color:#171717 !important;" title="christelle haddad">Christelle Haddad</a>
+    ©2022 <a href="https://christellehddd.com/" style="color:#171717 !important;" title="christelle haddad">Webcode</a>
 </div>
 <script src="index.js" type="text/javascript"></script>
 </body>
