--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
 <div id="footer">
     <a href="https://g.page/r/CWhZNV453lfOEBI/review"><img src="images/review.png" width="15%" class="review"/></a></br>
-    ©2022 <a href="https://christellehddd.com/" style="color:#171717 !important;" title="christelle haddad">Webcode</a>
+    ©2022 <a href="https://christellehddd.com/" style="color:#171717 !important;" title="christelle haddad">CH</a>
 </div>
 <script src="index.js" type="text/javascript"></script>
 </body>
