--- a/index.html
+++ b/index.html
@@ -195,17 +195,17 @@
     <div id="work">
         <h2 style="text-transform:uppercase;">latest work</h2>
         <div id="photos">
-            <figure> <a href="https://ptstrading.net/"><img onclick="magnify($(this).attr('src'))" src="images/pts.png" alt="Wordpress PTSTrading Website" ></a></figure>
-            <figure>  <a href="https://www.behance.net/gallery/102435435/LMS"> <img onclick="magnify($(this).attr('src'))" src="images/lmss.png" alt="Web Development Library Management System Project"></a></figure>
+            <figure> <a href="https://ptstrading.net/"><img onclick="magnify($(this).attr('src'))" src="images/ptsf.png" alt="Wordpress PTSTrading Website" ></a></figure>
+            <figure>  <a href="https://www.behance.net/gallery/102435435/LMS"> <img onclick="magnify($(this).attr('src'))" src="images/lmssf.png" alt="Web Development Library Management System Project"></a></figure>
             <!-- <figure>  <img onclick="magnify($(this).attr('src'))" src="images/musicc.png" alt="Music player UX project"></a></figure>-->
-            <figure>  <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant.png" alt="Wordpress LevantLink Website Cyprus"></a></figure>
+            <figure>  <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levantf.png" alt="Wordpress LevantLink Website Cyprus"></a></figure>
      <!--  <figure> <a href="https://imadaboukhalil.com/the-authentic-you"><img onclick="magnify($(this).attr('src'))" src="images/imad.png" alt="The authentic you webinar landing page" ></a></figure>
-     --> <figure> <a href="#"><img onclick="magnify($(this).attr('src'))" src="images/heap.png" alt="Shopify HEAP Apparel Website" ></a></figure>
-     <figure>  <a href="https://thesteakhouse.webflow.io/"> <img onclick="magnify($(this).attr('src'))"src="images/steak.png" alt="The Steakhouse Webflow Project"></a></figure>
+     --> <figure> <a href="#"><img onclick="magnify($(this).attr('src'))" src="images/heapf.png" alt="Shopify HEAP Apparel Website" ></a></figure>
+     <figure>  <a href="https://thesteakhouse.webflow.io/"> <img onclick="magnify($(this).attr('src'))"src="images/steakf.png" alt="The Steakhouse Webflow Project"></a></figure>
      <figure> <a  href="https://www.behance.net/gallery/131154021/Movie-Tickets-Booking-App-UX-Case-Study"><img onclick="magnify($(this).attr('src'))" src="images/cine.png" alt="Movie Tickets Booking App-UX Project"></a></figure>
-     <figure>    <img onclick="magnify($(this).attr('src'))" src="images/law.png" alt="Web Development Law Project"></figure>
-     <img onclick="magnify($(this).attr('src'))" src="images/ddf.png" alt="DDF Project"> 
-     <figure> <a href="https://pepesrestaurant.webflow.io/"><img onclick="magnify($(this).attr('src'))" src="images/pepes.png" alt="Pepe's Restaurant Webflow Project"></a></figure>
+     <figure>    <img onclick="magnify($(this).attr('src'))" src="images/lawf.png" alt="Web Development Law Project"></figure>
+     <img onclick="magnify($(this).attr('src'))" src="images/ddf2.png" alt="DDF Project"> 
+     <figure> <a href="https://pepesrestaurant.webflow.io/"><img onclick="magnify($(this).attr('src'))" src="images/pepesf.png" alt="Pepe's Restaurant Webflow Project"></a></figure>
      
      <!--  <a  href="https://behance.net/christellehddd"><img onclick="magnify($(this).attr('src'))" src="images/plus.png" class="img_plus" alt="plus button" ></a>-->
  </div>
