--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <!-- <figure>  <img onclick="magnify($(this).attr('src'))" src="images/musicc.png" alt="Music player UX project"></a></figure>-->
             <figure>  <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levantf.png" alt="Wordpress LevantLink Website Cyprus"></a></figure>
      <!--  <figure> <a href="https://imadaboukhalil.com/the-authentic-you"><img onclick="magnify($(this).attr('src'))" src="images/imad.png" alt="The authentic you webinar landing page" ></a></figure>
-     --> <figure> <a href="#"><img onclick="magnify($(this).attr('src'))" src="images/heapf.png" alt="Shopify HEAP Apparel Website" ></a></figure>
+     --> <figure> <a href="#"><img onclick="magnify($(this).attr('src'))" src="images/heap (1)f.png" alt="Shopify HEAP Apparel Website" ></a></figure>
      <figure>  <a href="https://thesteakhouse.webflow.io/"> <img onclick="magnify($(this).attr('src'))"src="images/steakf.png" alt="The Steakhouse Webflow Project"></a></figure>
      <figure> <a  href="https://www.behance.net/gallery/131154021/Movie-Tickets-Booking-App-UX-Case-Study"><img onclick="magnify($(this).attr('src'))" src="images/cine.png" alt="Movie Tickets Booking App-UX Project"></a></figure>
      <figure>    <img onclick="magnify($(this).attr('src'))" src="images/lawf.png" alt="Web Development Law Project"></figure>
