--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         margin-left: 15px;
     }
     
-    .process{
+    .process,.testimonials{
         width: 100%;
         padding: 6vh 4vw;
         font-weight: 300;
