--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         margin-left: 15px;
     }
     
-    .process,.testimonials{
+    .process{
         width: 100%;
         padding: 6vh 4vw;
         font-weight: 300;
@@ -281,7 +281,7 @@
 
 </div>
 
-<div id="testimonials">
+<div class="process">
     
 <div class="slider">
   <input type="radio" name="slider" title="slide1" checked="checked" class="slider__nav"/>
