--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
    document.getElementById("demo-form").submit();
 }
 </script>
-<!--<script>
+
+	<script>
     //for disabling right click use this as it is 
     document.addEventListener('contextmenu', event => event.preventDefault());
-</script>-->
+</script>
 
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -221,7 +222,9 @@
       <br><hr><marquee behavior="scroll" direction="left" scrollamount="10" class="marquee">
        Web Management  -  UI/UX Design  -  Webflow  -  Wordpress - Shopify  - Joomla -  Search Engine Optimization - Google Analytics  - Google My Business - Google Sites - Email Automation - Website Audit - Website Optimization
    </marquee><hr><br><br> 
-   <h3 style="text-transform:uppercase;color:#dfd2c3;text-align:center;">accreditation</h3>
+   <h3 style="text-transform:uppercase;color:#dfd2c3;text-align:center;    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-stroke: 1px #dfd2c3;">accreditation</h3>
    <div class="card-deck">
       <div class="card">
         <a href="https://www.linkedin.com/in/christellehaddad/"> <img src="images/certificate-badge.png" width="35%" class="semrush"> </a></div>
