--- a/index.html
+++ b/index.html
@@ -297,6 +297,12 @@
        <form action="https://getform.io/f/2ff73cfd-e3c4-4ec8-b0e8-042615c37b4b" method="POST" id="demo-form">
         <input type="text" placeholder="name" name="name" required>
         <input type="email" placeholder="email" name="email" required><br>
+	       <select name="type" placeholder="type of website" name="type" multiple>
+		       <option value="informative">Informative</option>
+		        <option value="ecommerce">eCommerce</option>
+		        <option value="portfolio">Portfolio</option>
+		       <option value="landing">Landing Page</option>
+               </select>
         <textarea placeholder="message" required rows="5" name="message" required></textarea><br>
         <button
         data-sitekey="6LdQJ5kfAAAAALtXB9QIAxUn3wZ4wI16-ajCmrKM" 
