--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
        <form action="https://getform.io/f/2ff73cfd-e3c4-4ec8-b0e8-042615c37b4b" method="POST" id="demo-form">
         <input type="text" placeholder="name" name="name" required>
         <input type="email" placeholder="email" name="email" required><br>
+	         <label for="type">Type of Website:</label>
 	       <select name="type" placeholder="type of website" name="type" multiple>
 		       <option value="informative">Informative</option>
 		        <option value="ecommerce">eCommerce</option>
