--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 }
 </script>
 
-	<script>
+	<!--<script>
     //for disabling right click use this as it is 
     document.addEventListener('contextmenu', event => event.preventDefault());
-</script>
+</script>-->
 
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
