--- a/index.html
+++ b/index.html
@@ -298,12 +298,12 @@
         <input type="text" placeholder="name" name="name" required>
         <input type="email" placeholder="email" name="email" required><br>
 	        
-	       <select name="type" placeholder="type of website" name="type" multiple>
-		          <option value="type">Type of Website</option>
-		       <option value="informative">Informative</option>
-		        <option value="ecommerce">eCommerce</option>
-		        <option value="portfolio">Portfolio</option>
-		       <option value="landing">Landing Page</option>
+	       <select name="type" required>
+		          <option value="type">type of website</option>
+		       <option value="informative">informative</option>
+		        <option value="ecommerce">ecommerce</option>
+		        <option value="portfolio">portfolio</option>
+		       <option value="landing">landing page</option>
                </select>
         <textarea placeholder="message" required rows="5" name="message" required></textarea><br>
         <button
