--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <header id="header" style="background: #171717 !important;" class="animated slideInDown" style="animation-delay:1.8s;">
             <table>
                 <tr>
-                    <td id="logo" style="font-family: 'Agustina';color:#dfd2c3;"><span><</span>christellehaddad<span>/></span></td>
+                    <td id="logo" style="font-family: 'Agustina'!important;color:#dfd2c3;"><span><</span>christellehaddad<span>/></span></td>
                     <td id="navigation" style="color:#dfd2c3;text-transform:uppercase;">
                         
                         <a href="#work">work</a>
