--- a/index.html
+++ b/index.html
@@ -71,12 +71,8 @@
 <link rel="stylesheet" href="index.css">
 
 <style>
-   	@font-face {
-    font-family: 'Agustina';
-    font-style: normal;
-    font-weight: 400;
-    src: local('Agustina'), url('https://fonts.cdnfonts.com/s/29981/Agustina.woff') format('woff');
-}
+   	 @import url('https://fonts.cdnfonts.com/css/agustina');
+	
     figcaption{
         text-transform:uppercase;
         color:#dfd2c3;
