--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
 <link rel="stylesheet" href="index.css">
 
 <style>
-   	 @import url('https://fonts.cdnfonts.com/css/agustina');
+   	    @font-face {
+    font-family: 'Agustina Regular';
+    font-style: normal;
+    font-weight: normal;
+    src: local('Agustina Regular'), url('Agustina.woff') format('woff');
+    }
+	@import url('https://fonts.cdnfonts.com/css/agustina');
 	
     figcaption{
         text-transform:uppercase;
