--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
                         <a href="#work">work</a>
                         <a href="#bio">about</a>
                         <a href="#contact">contact</a>
+			    <a href="https://calendly.com/christellehddd">book a call ➜</a>
                     </td>
                 </tr>
             </table>
@@ -191,8 +192,9 @@
         <table id="top_part" style="background-color: #171717;">
             <tr>
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
-                    <h2 style="color:#dfd2c3;">Hi there👋 I am Christelle, a Web Developer & Designer.</h2>
+			
                     <h1 class="big_header" ><span>I build beautiful <i>user-centered</i> experiences.</span></h1>
+                    <h2 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h2>
                     <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" >Book a call</button></a><br>
                     
                 </td>
