--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="christellehddd.com">
 <meta property="twitter:url" content="htts://christellehddd.com/">
-<meta name="twitter:title" content="Freelance Web Designer & Developer | Christelle Haddad">
+<meta name="twitter:title" content="Freelance Web Developer | Christelle Haddad">
 <meta name="twitter:description" content="Christelle is a design-minded web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
 <meta name="twitter:image" content="/images/meta.png">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -194,7 +194,7 @@
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
 			
                     <h1 class="big_header" ><span>I build beautiful <i>user-centered</i> experiences.</span></h1>
-                    <h2 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h2>
+                    <h2 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h2></br>
                     <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" >Book a call</button></a><br>
                     
                 </td>
