--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <!-- HTML Meta Tags -->
 <title>Freelance Web Developer | Christelle Haddad</title>
 <meta name="description" content="Christelle is a design-minded web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
-<link rel="author" href="https://www.linkedin.com/in/christellehaddad/" /><meta name="author" content="Christelle Haddad" />
+<link rel="author" href="https://www.linkedin.com/in/christellehaddad/" /><meta name="author" content="Freelance webd eveloper Christelle Haddad" />
 <meta name="keywords" content="freelance web designer, seo, developer, freelance web designer portfolio, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
 <link rel="icon" href="images/favicon.icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -192,10 +192,9 @@
         <table id="top_part" style="background-color: #171717;">
             <tr>
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
-			
+			 <h2 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h2></br>
                     <h1 class="big_header" ><span>I build beautiful <i>user-centered</i> experiences.</span></h1>
-                    <h2 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h2></br>
-                    <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" >Book a call</button></a><br>
+                   <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" >Book a call</button></a><br>
                     
                 </td>
             </td>
@@ -222,16 +221,16 @@
 <div id="bio">
    <h2 style="text-transform:uppercase;color:#dfd2c3;">about</h2>
    <p>
-     My name is Christelle Haddad, I am a web developer with a passion for UX design and SEO. 
-     I build beautiful user-centered experiences for brands and people who want to stand out. As a freelancer, 
-     I offer services to companies, start-ups and individuals all over the world.  
+     My name is Christelle Haddad, I am a web developer with a passion for UI/UX Design and SEO. 
+	   I build beautiful user-centered experiences for brands and people who want to make a statement and stand out. As a freelancer, 
+	   I work with companies, start-ups, and individuals from all corners of the globe to help them achieve their goals. 
      <center>
       <br><hr><marquee behavior="scroll" direction="left" scrollamount="10" class="marquee">
        Web Management  -  UI/UX Design  -  Webflow  -  Wordpress - Shopify  - Joomla -  Search Engine Optimization - Google Analytics  - Google My Business - Google Sites - Email Automation - Website Audit - Website Optimization
    </marquee><hr><br><br> 
-   <h3 style="text-transform:uppercase;color:#dfd2c3;text-align:center;    -webkit-text-fill-color: transparent;
+   <h2 style="text-transform:uppercase;color:#dfd2c3;text-align:center;    -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
-    -webkit-text-stroke: 1px #dfd2c3;">accreditation</h3>
+    -webkit-text-stroke: 1px #dfd2c3;">accreditation</h2>
    <div class="card-deck">
       <div class="card">
         <a href="https://www.linkedin.com/in/christellehaddad/"> <img src="images/certificate-badge.png" width="35%" class="semrush"> </a></div>
@@ -289,7 +288,7 @@
 
 </div>
 
-<div style="margin:4em;">
+<div style="margin:2em;">
    <marquee behavior="scroll" direction="right" scrollamount="10" class="marquee">
     <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀   Let's build someting great together! 💻 🚀 </h2> 
 </marquee>
@@ -304,7 +303,7 @@
        <form action="https://getform.io/f/2ff73cfd-e3c4-4ec8-b0e8-042615c37b4b" method="POST" id="demo-form">
         <input type="text" placeholder="name" name="name" required>
         <input type="email" placeholder="email" name="email" required><br>
-	        
+	         <input type="business name" placeholder="business name" name="business name" required><br>
 	       <select name="type" required>
 		          <option value="type">type of website</option>
 		       <option value="informative">informative</option>
