--- a/index.html
+++ b/index.html
@@ -288,10 +288,10 @@
 
 </div>
 
-<div style="margin:2em;">
-   <marquee behavior="scroll" direction="right" scrollamount="10" class="marquee">
-    <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀    Let's build someting great together! 💻 🚀   Let's build someting great together! 💻 🚀 </h2> 
-</marquee>
+<div style="margin:3em 0 3em;display:flex;flex-direction: row;flex-flow: row wrap;: ;width: 100%;justify-content: space-around;">
+  <div> <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Let's build someting great together! 💻 🚀    </h2></div> 
+ <div> <a href="#contact"> <button class="pulse-grow-on-hover" >Get a Quote</button></a></div>
+
 </div>
 
 <div id="contact">
