--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 }
 </script>
 
-	<script>
+	<!--<script>
     //for disabling right click use this as it is 
     document.addEventListener('contextmenu', event => event.preventDefault());
-</script>
+</script>-->
 
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -114,6 +114,8 @@
         display:flex;
         flex-direction: column;
     }
+	    
+	    .cta{ flex-direction: column;}
     
     .review{
         width:30%;
@@ -288,7 +290,7 @@
 
 </div>
 
-<div style="margin:3em 0 3em;display:flex;flex-direction: row;flex-flow: row wrap;: ;width: 100%;justify-content: space-around;">
+<div class="cta" style="margin:3em 0 3em;display:flex;flex-direction: row;flex-flow: row wrap;: ;width: 100%;justify-content: space-around;">
   <div> <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Let's build someting great together! 💻 🚀    </h2></div> 
  <div> <a href="#contact"> <button class="pulse-grow-on-hover" >Get a Quote</button></a></div>
 
