--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
         flex-direction: column;
     }
 	    
-	    .cta{ flex-direction: column;}
+	    .cta{ flex-direction: column;
+	    row-gap:20px;}
     
     .review{
         width:30%;
@@ -292,7 +293,7 @@
 
 <div class="cta" style="margin:3em 0 3em;display:flex;flex-direction: row;flex-flow: row wrap;: ;width: 100%;justify-content: space-around;">
   <div> <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Let's build someting great together! 💻 🚀    </h2></div> 
- <div> <a href="#contact"> <button class="pulse-grow-on-hover" >Get a Quote</button></a></div>
+ <div> <a href="#contact"> <button class="pulse-grow-on-hover" color:black!important;>Get a Quote</button></a></div>
 
 </div>
 
