--- a/index.html
+++ b/index.html
@@ -293,7 +293,20 @@
 
 <div class="cta" style="margin:3em 0 3em;display:flex;flex-direction: row;flex-flow: row wrap;: ;width: 100%;justify-content: space-around;">
   <div> <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Let's build someting great together! 💻 🚀    </h2></div> 
- <div> <a href="#contact"> <button class="pulse-grow-on-hover" color:black!important;>Get a Quote</button></a></div>
+ <div> <a href="#contact"> <button style="padding: 12px 25px;
+    border: 1px solid black;
+    border-radius: 0px;
+    background-color: transparent;
+    -webkit-transition: opacity 200ms ease, box-shadow 300ms ease, background-color 300ms ease, opacity 300ms ease, color 300ms ease, -webkit-transform 300ms ease;
+    transition: opacity 200ms ease, box-shadow 300ms ease, background-color 300ms ease, opacity 300ms ease, color 300ms ease, -webkit-transform 300ms ease;
+    transition: transform 300ms ease, opacity 200ms ease, box-shadow 300ms ease, background-color 300ms ease, opacity 300ms ease, color 300ms ease;
+    transition: transform 300ms ease, opacity 200ms ease, box-shadow 300ms ease, background-color 300ms ease, opacity 300ms ease, color 300ms ease, -webkit-transform 300ms ease;
+    color: black;
+    font-size: 12px;
+    line-height: 20px;
+    letter-spacing: 2px;
+    text-decoration: none;
+    text-transform: uppercase;">Get a Quote</button></a></div>
 
 </div>
 
