--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 }
 </script>
 
-	<!--<script>
+	<script>
     //for disabling right click use this as it is 
     document.addEventListener('contextmenu', event => event.preventDefault());
-</script>-->
+</script>
 
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -69,6 +69,17 @@
 <link rel="stylesheet" href="index.css">
 
 <style>
+	
+	/* hide scrollbar but allow scrolling */
+body {
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll; 
+}
+
+body::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
+}
    	    @font-face {
     font-family: 'Agustina Regular';
     font-style: normal;
