--- a/index.html
+++ b/index.html
@@ -198,7 +198,6 @@ body::-webkit-scrollbar {
                         <a href="#work">work</a>
                         <a href="#bio">about</a>
                         <a href="#contact">contact</a>
-			    <a href="https://calendly.com/christellehddd">book a call ➜</a>
                     </td>
                 </tr>
             </table>
@@ -208,7 +207,7 @@ body::-webkit-scrollbar {
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
 			 <h2 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h2></br>
                     <h1 class="big_header" ><span>I build beautiful <i>user-centered</i> experiences.</span></h1>
-                   <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" >Book a call</button></a><br>
+                   <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" >Book a call ➜</button></a><br>
                     
                 </td>
             </td>
