--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ body::-webkit-scrollbar {
 <title>Freelance Web Developer | Christelle Haddad</title>
 <meta name="description" content="Christelle is a design-minded web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
 <link rel="author" href="https://www.linkedin.com/in/christellehaddad/" /><meta name="author" content="Freelance webd eveloper Christelle Haddad" />
-<meta name="keywords" content="freelance web designer, seo, developer, freelance web designer portfolio, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
+<meta name="keywords" content="freelance web designer, seo, developer, joomla developer, shopify developer, wordpress developer, freelance web designer portfolio, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
 <link rel="icon" href="images/favicon.icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -246,12 +246,12 @@ body::-webkit-scrollbar {
     -webkit-text-stroke: 1px #dfd2c3;">accreditation</h2>
    <div class="card-deck">
       <div class="card">
-        <a href="https://www.linkedin.com/in/christellehaddad/"> <img src="images/certificate-badge.png" width="35%" class="semrush"> </a></div>
+        <a href="https://www.linkedin.com/in/christellehaddad/"> <img src="images/certificate-badge.png" width="35%" class="semrush" alt="semrush certificate"> </a></div>
         <div class="card">
-            <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/2B87TBBWC9C4"> <img src="images/ux.png" width="35%" class="ux" ></a></div>
+            <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/2B87TBBWC9C4"> <img src="images/ux.png" alt="google UX design certificate" width="35%" class="ux" ></a></div>
             
             <div class="card">
-               <a href="https://www.linkedin.com/in/christellehaddad/"> <img src="images/shopify-partner-christelle-haddad.png" width="30%" class="shopify"> </a><br></div>
+               <a href="https://www.linkedin.com/in/christellehaddad/"> <img src="images/shopify-partner-christelle-haddad.png" width="30%" alt="shopify partner" class="shopify"> </a><br></div>
            </div>
        </center>
    </p>
