--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ body::-webkit-scrollbar {
      --> <figure> <a href="https://heapapparel.com/"><img onclick="magnify($(this).attr('src'))" src="images/heap%20(1)f.png" alt="Shopify HEAP Apparel Website" ></a></figure>
      <figure>  <a href="https://thesteakhouse.webflow.io/"> <img onclick="magnify($(this).attr('src'))"src="images/steakf.png" alt="The Steakhouse Webflow Project"></a></figure>
      <figure> <a  href="https://www.behance.net/gallery/131154021/Movie-Tickets-Booking-App-UX-Case-Study"><img onclick="magnify($(this).attr('src'))" src="images/cine.png" alt="Movie Tickets Booking App-UX Project"></a></figure>
-     <figure>    <img onclick="magnify($(this).attr('src'))" src="images/googlesite.png" alt="Google site design"></figure>
+     <figure>    <img onclick="magnify($(this).attr('src'))" src="images/googlesite-.png" alt="Google site design"></figure>
      <img onclick="magnify($(this).attr('src'))" src="images/ddf2.png" alt="DDF Project"> 
      <figure> <a href="https://pepesrestaurant.webflow.io/"><img onclick="magnify($(this).attr('src'))" src="images/pepesf.png" alt="Pepe's Restaurant Webflow Project"></a></figure>
      
