--- a/index.html
+++ b/index.html
@@ -69,29 +69,6 @@
 <link rel="stylesheet" href="index.css">
 
 <style>
-	.typewriter h1 {
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid orange; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .15em; /* Adjust as needed */
-  animation: 
-    typing 3.5s steps(40, end),
-    blink-caret .75s step-end infinite;
-}
-
-/* The typing effect */
-@keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
-}
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: orange; }
-}
-	
 	
 	
 	/* hide scrollbar but allow scrolling */
@@ -230,7 +207,7 @@ body::-webkit-scrollbar {
             <tr>
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
 			 <h2 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h2></br>
-                    <h1 class="big_header typewriter" ><span>I build beautiful <i>user-centered</i> experiences.</span></h1>
+                    <h1 class="big_header" ><span>I build beautiful <i>user-centered</i> experiences.</span></h1>
                    <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" >Book a call ➜</button></a><br>
                     
                 </td>
