--- a/index.html
+++ b/index.html
@@ -217,7 +217,9 @@ body::-webkit-scrollbar {
     <div id="work">
         <h2 style="text-transform:uppercase;">latest work</h2>
         <div id="photos">
-            <figure> <a href="https://ptstrading.net/"><img onclick="magnify($(this).attr('src'))" src="images/ptsf.png" alt="Wordpress PTSTrading Website" ></a></figure>
+		 <figure> <a href="https://wpadvisors.ch/"><img onclick="magnify($(this).attr('src'))" src="images/wpa.png" alt="Wordpress WPA Website" ></a></figure>
+            <figure> <a href="https://protecevents.com/"><img onclick="magnify($(this).attr('src'))" src="images/protec.png" alt="Wordpress Protec Website" ></a></figure>
+		<figure> <a href="https://ptstrading.net/"><img onclick="magnify($(this).attr('src'))" src="images/ptsf.png" alt="Wordpress PTSTrading Website" ></a></figure>
             <figure>  <a href="https://www.behance.net/gallery/102435435/LMS"> <img onclick="magnify($(this).attr('src'))" src="images/lmssf.png" alt="Web Development Library Management System Project"></a></figure>
             <!-- <figure>  <img onclick="magnify($(this).attr('src'))" src="images/musicc.png" alt="Music player UX project"></a></figure>-->
             <figure>  <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant%20(1)f.png" alt="Wordpress LevantLink Website Cyprus"></a></figure>
@@ -228,8 +230,7 @@ body::-webkit-scrollbar {
      <figure>    <img onclick="magnify($(this).attr('src'))" src="images/googlesite-.png" alt="Google site design"></figure>
      <img onclick="magnify($(this).attr('src'))" src="images/ddf2.png" alt="DDF Project"> 
      <figure> <a href="https://pepesrestaurant.webflow.io/"><img onclick="magnify($(this).attr('src'))" src="images/pepesf.png" alt="Pepe's Restaurant Webflow Project"></a></figure>
-     
-     <!--  <a  href="https://behance.net/christellehddd"><img onclick="magnify($(this).attr('src'))" src="images/plus.png" class="img_plus" alt="plus button" ></a>-->
+     <a  href="https://behance.net/christellehddd"><img onclick="magnify($(this).attr('src'))" src="images/plus.png" class="img_plus" alt="plus button" ></a>
  </div>
 </div>
 <div id="bio">
