--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@ body::-webkit-scrollbar {
 </div>
 
 <div class="cta" style="margin:8em 0 8em;display:flex;flex-direction: row;flex-flow: row wrap;: ;width: 100%;justify-content: space-around;">
-  <div> <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Let's build someting great together! 💻 🚀    </h2></div> 
- <div> <a href="#contact"> <button class="pulse-grow-on-hover" style="color: #18161b; border: 1px solid #18161b;" >Get a Quote</button></a></div>
+  <div> <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Have a project in mind? <span style="-webkit-text-stroke: 2px red;">Let's work together! 💻 🚀</span>    </h2></div> 
+ <div> <a href="#contact"> <button class="pulse-grow-on-hover" style="color: #18161b; border: 1px solid #18161b;" > GET A QUOTE </button></a></div>
 
 </div>
 
@@ -319,6 +319,13 @@ body::-webkit-scrollbar {
         <input type="text" placeholder="name" name="name" required>
         <input type="email" placeholder="email" name="email" required><br>
 	         <input type="business name" placeholder="business name" name="business name" required><br>
+	        <select name="service" required>
+		          <option value="service">service needed</option>
+		       <option value="web design/development">web design/development</option>
+		        <option value="seo">seo</option>
+		        <option value="maintenance">web maintenance</option>
+		       <option value="landing">landing page</option>
+               </select>
 	       <select name="type" required>
 		          <option value="type">type of website</option>
 		       <option value="informative">informative</option>
@@ -326,7 +333,7 @@ body::-webkit-scrollbar {
 		        <option value="portfolio">portfolio</option>
 		       <option value="landing">landing page</option>
                </select>
-        <textarea placeholder="message" required rows="5" name="message" required></textarea><br>
+        <textarea placeholder="message" required rows="5" name="describe your business in few sentences" required></textarea><br>
         <button
         data-sitekey="6LdQJ5kfAAAAALtXB9QIAxUn3wZ4wI16-ajCmrKM" 
         data-callback='onSubmit' 
