--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ body::-webkit-scrollbar {
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="christellehddd.com">
 <meta property="twitter:url" content="htts://christellehddd.com/">
-<meta name="twitter:title" content="Freelance Web Developer | Christelle Haddad">
+<meta name="twitter:title" content="Christelle Haddad • Lebanon based Freelance Web Designer &amp; Developer">
 <meta name="twitter:description" content="Christelle is a design-minded web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
 <meta name="twitter:image" content="/images/meta.png">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -237,8 +237,8 @@ body::-webkit-scrollbar {
    <h2 style="text-transform:uppercase;color:#dfd2c3;">about</h2>
    <p>
      My name is Christelle Haddad, I am a web developer with a passion for UI/UX Design and SEO. 
-	   I build beautiful user-centered experiences for brands and people who want to make a statement and stand out. As a freelancer, 
-	   I work with companies, start-ups, and individuals from all corners of the globe to help them achieve their goals. 
+	   I build beautiful user-centered experiences and interfaces for brands and people who want to make a statement and stand out. As a freelancer, 
+	   I work with companies, start-ups, and individuals from all corners of the globe to help them grow their digital presence and achieve their goals. 
      <center>
       <br><hr><marquee behavior="scroll" direction="left" scrollamount="10" class="marquee">
        Web Management  -  UI/UX Design  -  Webflow  -  Wordpress - Shopify  - Joomla -  Search Engine Optimization - Google Analytics  - Google My Business - Google Sites - Email Automation - Website Audit - Website Optimization
@@ -324,8 +324,9 @@ body::-webkit-scrollbar {
 		       <option value="web design/development">web design/development</option>
 		        <option value="seo">seo</option>
 		        <option value="maintenance">web maintenance</option>
-		       <option value="landing">landing page</option>
+		       <option value="optimization">web optimization</option>
                </select>
+	        
 	       <select name="type" required>
 		          <option value="type">type of website</option>
 		       <option value="informative">informative</option>
