--- a/index.html
+++ b/index.html
@@ -223,22 +223,22 @@ body::-webkit-scrollbar {
             <figure>  <a href="https://www.behance.net/gallery/102435435/LMS"> <img onclick="magnify($(this).attr('src'))" src="images/lmssf.png" alt="Web Development Library Management System Project"></a></figure>
             <!-- <figure>  <img onclick="magnify($(this).attr('src'))" src="images/musicc.png" alt="Music player UX project"></a></figure>-->
             <figure>  <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant%20(1)f.png" alt="Wordpress LevantLink Website Cyprus"></a></figure>
-     <!--  <figure> <a href="https://imadaboukhalil.com/the-authentic-you"><img onclick="magnify($(this).attr('src'))" src="images/imad.png" alt="The authentic you webinar landing page" ></a></figure>
-     --> <figure> <a href="https://heapapparel.com/"><img onclick="magnify($(this).attr('src'))" src="images/heap%20(1)f.png" alt="Shopify HEAP Apparel Website" ></a></figure>
+     <figure> <a href="https://imadaboukhalil.com/the-authentic-you"><img onclick="magnify($(this).attr('src'))" src="images/imad.png" alt="The authentic you webinar landing page" ></a></figure>
+     <figure> <a href="https://heapapparel.com/"><img onclick="magnify($(this).attr('src'))" src="images/heap%20(1)f.png" alt="Shopify HEAP Apparel Website" ></a></figure>
      <figure>  <a href="https://thesteakhouse.webflow.io/"> <img onclick="magnify($(this).attr('src'))"src="images/steakf.png" alt="The Steakhouse Webflow Project"></a></figure>
      <figure> <a  href="https://www.behance.net/gallery/131154021/Movie-Tickets-Booking-App-UX-Case-Study"><img onclick="magnify($(this).attr('src'))" src="images/cine.png" alt="Movie Tickets Booking App-UX Project"></a></figure>
      <figure>    <img onclick="magnify($(this).attr('src'))" src="images/googlesite-.png" alt="Google site design"></figure>
      <img onclick="magnify($(this).attr('src'))" src="images/ddf2.png" alt="DDF Project"> 
      <figure> <a href="https://pepesrestaurant.webflow.io/"><img onclick="magnify($(this).attr('src'))" src="images/pepesf.png" alt="Pepe's Restaurant Webflow Project"></a></figure>
-     <a  href="https://behance.net/christellehddd"><img onclick="magnify($(this).attr('src'))" src="images/plus.png" class="img_plus" alt="plus button" ></a>
+     <!--<a  href="https://behance.net/christellehddd"><img onclick="magnify($(this).attr('src'))" src="images/plus.png" class="img_plus" alt="plus button" ></a>-->
  </div>
 </div>
 <div id="bio">
    <h2 style="text-transform:uppercase;color:#dfd2c3;">about</h2>
    <p>
      My name is Christelle Haddad, I am a web developer with a passion for UI/UX Design and SEO. 
-	   I build beautiful user-centered experiences and interfaces for brands and people who want to make a statement and stand out. As a freelancer, 
-	   I work with companies, start-ups, and individuals from all corners of the globe to help them grow their digital presence and achieve their goals. 
+	   I build beautiful user-centered interfaces for brands and people who want to grow their digital presence, make a statement and stand out. As a freelancer, 
+	   I work with companies, start-ups, and individuals from all corners of the globe to help them achieve their goals. 
      <center>
       <br><hr><marquee behavior="scroll" direction="left" scrollamount="10" class="marquee">
        Web Management  -  UI/UX Design  -  Webflow  -  Wordpress - Shopify  - Joomla -  Search Engine Optimization - Google Analytics  - Google My Business - Google Sites - Email Automation - Website Audit - Website Optimization
@@ -304,7 +304,7 @@ body::-webkit-scrollbar {
 </div>
 
 <div class="cta" style="margin:8em 0 8em;display:flex;flex-direction: row;flex-flow: row wrap;: ;width: 100%;justify-content: space-around;">
-  <div> <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Have a project in mind? <span style="-webkit-text-stroke: 2px red;">Let's work together! 💻 🚀</span>    </h2></div> 
+  <div> <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Have a project in mind? Let's work together! 💻 🚀    </h2></div> 
  <div> <a href="#contact"> <button class="pulse-grow-on-hover" style="color: #18161b; border: 1px solid #18161b;" > GET A QUOTE </button></a></div>
 
 </div>
