--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ body::-webkit-scrollbar {
             <tr>
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
 			 <h2 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h2></br>
-                    <h1 class="big_header" ><span>I build beautiful <i>user-centered</i> experiences.</span></h1>
+                    <h1 class="big_header" ><span>I build beautiful <i>user-centered</i> interfaces.</span></h1>
                    <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" >Book a call ➜</button></a><br>
                     
                 </td>
