--- a/index.html
+++ b/index.html
@@ -217,16 +217,16 @@ body::-webkit-scrollbar {
     <div id="work">
         <h2 style="text-transform:uppercase;">latest work</h2>
         <div id="photos">
-		 <figure> <a href="https://wpadvisors.ch/"><img onclick="magnify($(this).attr('src'))" src="images/wpa.png" alt="Wordpress WPA Website" ></a> <div> <a href="#"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div>
+		 <figure> <a href="https://wpadvisors.ch/"><img onclick="magnify($(this).attr('src'))" src="images/wpa.png" alt="Wordpress WPA Website" ></a> <div> <a href="https://wpadvisors.ch/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div>
 </figure>
-            <figure> <a href="https://protecevents.com/"><img onclick="magnify($(this).attr('src'))" src="images/protec.png" alt="Wordpress Protec Website" ></a></figure>
-		<figure> <a href="https://ptstrading.net/"><img onclick="magnify($(this).attr('src'))" src="images/ptsf.png" alt="Wordpress PTSTrading Website" ></a></figure>
-            <figure>  <a href="https://www.behance.net/gallery/102435435/LMS"> <img onclick="magnify($(this).attr('src'))" src="images/lmssf.png" alt="Web Development Library Management System Project"></a></figure>
+            <figure> <a href="https://protecevents.com/"><img onclick="magnify($(this).attr('src'))" src="images/protec.png" alt="Wordpress Protec Website" ></a><div> <a href="https://protecevents.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
+		<figure> <a href="https://ptstrading.net/"><img onclick="magnify($(this).attr('src'))" src="images/ptsf.png" alt="Wordpress PTSTrading Website" ></a><a href="https://ptstrading.net/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
+            <figure>  <a href="https://www.behance.net/gallery/102435435/LMS"> <img onclick="magnify($(this).attr('src'))" src="images/lmssf.png" alt="Web Development Library Management System Project"></a><a href="#"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
             <!-- <figure>  <img onclick="magnify($(this).attr('src'))" src="images/musicc.png" alt="Music player UX project"></a></figure>-->
-            <figure>  <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant%20(1)f.png" alt="Wordpress LevantLink Website Cyprus"></a></figure>
-     <figure> <a href="https://imadaboukhalil.com/the-authentic-you"><img onclick="magnify($(this).attr('src'))" src="images/imad.png" alt="The authentic you webinar landing page" ></a></figure>
-     <figure> <a href="https://heapapparel.com/"><img onclick="magnify($(this).attr('src'))" src="images/heap%20(1)f.png" alt="Shopify HEAP Apparel Website" ></a></figure>
-     <figure>  <a href="https://thesteakhouse.webflow.io/"> <img onclick="magnify($(this).attr('src'))"src="images/steakf.png" alt="The Steakhouse Webflow Project"></a></figure>
+            <figure>  <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant%20(1)f.png" alt="Wordpress LevantLink Website Cyprus"></a><a href="https://www.levantlink.cy/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
+     <figure> <a href="https://imadaboukhalil.com/the-authentic-you"><img onclick="magnify($(this).attr('src'))" src="images/imad.png" alt="The authentic you webinar landing page" ></a><a href="https://imadaboukhalil.com/the-authentic-you"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
+     <figure> <a href="https://heapapparel.com/"><img onclick="magnify($(this).attr('src'))" src="images/heap%20(1)f.png" alt="Shopify HEAP Apparel Website" ></a><a href="https://heapapparel.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
+     <figure>  <a href="https://thesteakhouse.webflow.io/"> <img onclick="magnify($(this).attr('src'))"src="images/steakf.png" alt="The Steakhouse Webflow Project"></a><a href="#"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
      <figure> <a  href="https://www.behance.net/gallery/131154021/Movie-Tickets-Booking-App-UX-Case-Study"><img onclick="magnify($(this).attr('src'))" src="images/cine.png" alt="Movie Tickets Booking App-UX Project"></a></figure>
      <figure>    <img onclick="magnify($(this).attr('src'))" src="images/googlesite-.png" alt="Google site design"></figure>
      <img onclick="magnify($(this).attr('src'))" src="images/ddf2.png" alt="DDF Project"> 
